# Quake2VR

./: CMakeLists.txt  README.md  build.gradle  cardboard.patch  fetch.sh
src/main/: AndroidManifest.xml  yquake2-ref_gl3.patch  yquake2-ref_soft.patch  yquake2.20220130.patch  yquake2.20220501.patch  yquake2.patch
src/main/java/org/echoline/quake2vr/: Loader.java  VrActivity.java
src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLControllerManager.java
src/main/jni/: loader.cpp  quake2vr.cc  quake2vr.h  quake2vr_jni.cc
src/main/res/layout/: activity_vr.xml
src/main/res/values/: strings.xml
